{
  "version": 4,
  "terraform_version": "0.12.9",
  "serial": 759,
  "lineage": "306f0634-59bf-9f1e-2bd1-9d78ba6f5a47",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536969602909:internet-gateway/igw-06507bc51929b68a3",
            "id": "igw-06507bc51929b68a3",
            "owner_id": "536969602909",
            "tags": {
              "Environment": "dev",
              "Name": "eks-dev-igw",
              "Project": "eks",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-dev-amb-cluster": "shared"
            },
            "vpc_id": "vpc-0faedc80ecfb6cc18"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ee2f2b759e69a271",
            "owner_id": "536969602909",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06507bc51929b68a3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "eks-dev-rtb",
              "Project": "eks",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-dev-amb-cluster": "shared"
            },
            "vpc_id": "vpc-0faedc80ecfb6cc18"
          },
          "depends_on": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rtba",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bb1e8d09c612c7dc",
            "route_table_id": "rtb-0ee2f2b759e69a271",
            "subnet_id": "subnet-08aaaf4aff90aa154"
          },
          "depends_on": [
            "aws_route_table.rtb",
            "aws_subnet.subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d16328c3fd8de99",
            "route_table_id": "rtb-0ee2f2b759e69a271",
            "subnet_id": "subnet-031fea37434c6d2ba"
          },
          "depends_on": [
            "aws_route_table.rtb",
            "aws_subnet.subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0510e9ea8fedf0040",
            "route_table_id": "rtb-0ee2f2b759e69a271",
            "subnet_id": "subnet-05edcdafe639a593c"
          },
          "depends_on": [
            "aws_route_table.rtb",
            "aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster-master",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536969602909:security-group/sg-00ec8d9a053fae30f",
            "description": "EKS cluster master security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ec8d9a053fae30f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cluster-master",
            "name_prefix": "",
            "owner_id": "536969602909",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "eks-master-sg",
              "Project": "eks",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-dev-amb-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0faedc80ecfb6cc18"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster-nodes",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536969602909:security-group/sg-0081c1a5a27910596",
            "description": "EKS cluster nodes security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0081c1a5a27910596",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow cluster master to access cluster nodes",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00ec8d9a053fae30f"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow cluster master to access cluster nodes",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [
                  "sg-00ec8d9a053fae30f"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow inter pods communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "cluster-nodes",
            "name_prefix": "",
            "owner_id": "536969602909",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "eks-nodes-sg",
              "Project": "eks",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-dev-amb-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0faedc80ecfb6cc18"
          },
          "depends_on": [
            "aws_security_group.cluster-master",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private-db-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536969602909:security-group/sg-0dc85db1a80174be5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc85db1a80174be5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "private-db-sg",
            "name_prefix": "",
            "owner_id": "536969602909",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0faedc80ecfb6cc18"
          },
          "depends_on": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536969602909:subnet/subnet-08aaaf4aff90aa154",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-08aaaf4aff90aa154",
            "map_public_ip_on_launch": true,
            "owner_id": "536969602909",
            "tags": {
              "Environment": "dev",
              "Name": "eks-dev-subnet-1",
              "Project": "eks",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-dev-amb-cluster": "shared",
              "kubernetes.io/role/elb": ""
            },
            "vpc_id": "vpc-0faedc80ecfb6cc18"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536969602909:subnet/subnet-031fea37434c6d2ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-031fea37434c6d2ba",
            "map_public_ip_on_launch": true,
            "owner_id": "536969602909",
            "tags": {
              "Environment": "dev",
              "Name": "eks-dev-subnet-2",
              "Project": "eks",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-dev-amb-cluster": "shared",
              "kubernetes.io/role/elb": ""
            },
            "vpc_id": "vpc-0faedc80ecfb6cc18"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536969602909:subnet/subnet-05edcdafe639a593c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-05edcdafe639a593c",
            "map_public_ip_on_launch": true,
            "owner_id": "536969602909",
            "tags": {
              "Environment": "dev",
              "Name": "eks-dev-subnet-3",
              "Project": "eks",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-dev-amb-cluster": "shared",
              "kubernetes.io/role/elb": ""
            },
            "vpc_id": "vpc-0faedc80ecfb6cc18"
          },
          "depends_on": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:536969602909:vpc/vpc-0faedc80ecfb6cc18",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-073cf74071f9831c1",
            "default_route_table_id": "rtb-019a9e754f970960c",
            "default_security_group_id": "sg-03e4fc29fdbe184fa",
            "dhcp_options_id": "dopt-bd0105c6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0faedc80ecfb6cc18",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-019a9e754f970960c",
            "owner_id": "536969602909",
            "tags": {
              "Environment": "dev",
              "Name": "eks-dev-vpc",
              "Project": "eks",
              "Terraform": "true",
              "kubernetes.io/cluster/eks-dev-amb-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}